# school-projects

Sheepy run/: Assembly-CSharp.csproj  Sheepy run.rar  Sheepy run.sln  Sheepy run.userprefs
Sheepy run/Assets/: Main.unity
Sheepy run/ProjectSettings/: ProjectSettings.asset  TagManager.asset
Sheepy run/Sheepy Run PC_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets  sharedassets0.assets.resS
Sheepy run/Temp/: UnityTempFile-0f058daa6cab56a43b13cb869836e27e  UnityTempFile-0f29e912ac9ee0845b99cd798e3c4000  UnityTempFile-24e4f3393f7135b489237498e9683510  UnityTempFile-655f34fb8c83b6f4d92dd92d4b9e0e15  UnityTempFile-7036d35469095574bb4b072b45ce3cb3  UnityTempFile-8e4e5303b3ae6964aa723a234fb5daf2  UnityTempFile-9dbba5ed26f680640b1e7f4ff219313c  UnityTempFile-a8d67f07041697448b3088b831ff3e91  UnityTempFile-e54f4adcd8e4a0241b069b5f7cb64c61
Sheepy run/assests plocha/: Bez názvu-2.psd  apple.psd  background.psd  bubbling.psd  deadsheep.psd  game interface.psd  head.psd  heart animation.psd  obstacle.psd  pixelsheep.psd  run.psd  serco.psd  sprites.psd  wolf.psd
book-rental-service/: README.md  javaProjektUI.mp
book-rental-service/BookRentalDesktop/: nbactions.xml  pom.xml
book-rental-service/BookRentalParent/: pom.xml
hw03/: CMakeLists.txt  cpu.c  cpu.h  instruction_list.c  instruction_list.h  main.c
hw04/: CMakeLists.txt  CMakeLists.txt.user.e1de3fd  config.c  config.h  confighw.txt  domacauloha  hw04.conf  input  konf  log.c  log.h  main.c  module-cache.c  module-decorate.c  module-tolower.c  module-toupper.c  query.h
(+90 files in other folders)
